# Dazuoye

./: .gitignore  build_vulkan_android.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/haiyangapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: all-minilm-l6-v2-q8_0.gguf  qwen3-lora-merged-q4_k_m.gguf
app/src/main/cpp/: CMakeLists.txt  llama_android.cpp
app/src/main/java/com/example/haiyangapp/: MainActivity.kt  StartActivity.kt
app/src/main/java/com/example/haiyangapp/api/: DeepSeekApiService.kt  ResponseBodyConverterFactory.kt  RetrofitClient.kt  ToolExecutor.kt  WeatherService.kt  WebSearchService.kt
app/src/main/java/com/example/haiyangapp/api/models/: DeepSeekMessage.kt  DeepSeekRequest.kt  DeepSeekResponse.kt  FunctionCalling.kt
app/src/main/java/com/example/haiyangapp/database/: AppDatabase.kt
app/src/main/java/com/example/haiyangapp/inference/: InferenceRepository.kt  InferenceRepositoryImpl.kt  InferenceResult.kt  LlamaCppInference.kt  LlamaCppJNI.kt  ModelConfig.kt
app/src/main/java/com/example/haiyangapp/knowledge/: DocumentProcessor.kt  EmbeddingManager.kt  KnowledgeRepository.kt  PdfDocumentProcessor.kt  SemanticChunker.kt  TextChunker.kt  VectorSearch.kt  WordDocumentProcessor.kt
app/src/main/java/com/example/haiyangapp/repository/: ChatRepository.kt  ChatRepositoryImpl.kt  LocalChatRepositoryImpl.kt  RepositoryFactory.kt  UserRepository.kt
app/src/main/java/com/example/haiyangapp/ui/: BottomBar.kt  ChatMessage.kt  ChatScreen.kt  ChatViewModelFactory.kt  ConversationListScreen.kt  KnowledgeBaseScreen.kt  MarkdownText.kt  MessageBubble.kt  SuggestionChips.kt
app/src/main/java/com/example/haiyangapp/viewmodel/: AuthViewModel.kt  AuthViewModelFactory.kt  ChatViewModel.kt  ConversationViewModel.kt  ConversationViewModelFactory.kt  KnowledgeViewModel.kt
app/src/main/res/drawable/: bg_animated_gradient.xml  bg_tab_layout.xml  grad_1.xml  grad_2.xml  grad_3.xml  ic_lock.xml  logo_background.xml  tab_indicator_pill.xml
app/src/main/res/layout/: activity_main.xml  activity_start.xml  dialog_confirm.xml  fragment_login.xml  fragment_register.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/haiyangapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
test_docs/: 甄嬛传人物介绍.docx
(+11 files in other folders)
